k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-assignment04
  labels:
    app: assignment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assignment04
  template:
    metadata:
      labels:
        app: assignment04
    spec:
      containers:
      - name: container-app
        image: henrybaquiax/arquitectura-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
