k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-assignment04
spec:
  type: LoadBalancer 
  selector:
    app: assignment04
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 80
