k8s/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argo.henry-baquiax.com`) # Actualizado para coincidir con tu dominio
      kind: Rule
      services:
        - name: argocd-server
          port: 80
