k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-assignment04
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app.henry-baquiax.com`)
      kind: Rule
      services:
        - name: service-assignment04 
          port: 80
